toward fixing rendering

--- a/test_midi_input.ipynb
+++ b/test_midi_input.ipynb
@@ -19,7 +19,8 @@
     "import music21 as m21\n",
     "import os\n",
     "from GridMLM_tokenizers import CSGridMLMTokenizer\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from generate_utils import overlay_generated_harmony"
    ]
   },
   {
@@ -70,20 +71,272 @@
       "/media/maindisk/data/hooktheory_hr/nokey/11363_muse_the-small-print_chorus.mid\n",
       "['C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'C:min', 'D#:aug', 'D#:aug', 'D#:aug', 'D#:aug', 'D#:aug', 'D#:aug', 'D#:aug', 'D#:aug', 'D#:aug', 'D#:aug', 'D#:aug', 'D#:aug', 'D#:aug', 'D#:aug', 'D#:aug', 'D#:aug', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/maximos/miniconda3/envs/torch/lib/python3.12/site-packages/music21/stream/base.py:3694: Music21DeprecationWarning: .flat is deprecated.  Call .flatten() instead\n",
-      "  return self.iter().getElementsByClass(classFilterList)\n"
-     ]
     }
    ],
    "source": [
     "print(data_files[0])\n",
     "x = tokenizer.encode( data_files[0] )\n",
     "print(x['input_tokens'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "74473cfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', 'C:maj', 'C:maj', 'C:maj', 'C:maj', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<nc>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n",
+      "dict_keys(['input_tokens', 'input_ids', 'pianoroll', 'time_signature', 'attention_mask', 'skip_steps', 'melody_part', 'ql_per_quantum'])\n",
+      "0\n",
+      "0.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = tokenizer.encode( 'example_inputs/test_midi_constraints.mid', keep_durations=True )\n",
+    "print(x['input_tokens'])\n",
+    "print(x.keys())\n",
+    "print(x['skip_steps'])\n",
+    "print(x['ql_per_quantum'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "906bf630",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/maximos/miniconda3/envs/torch/lib/python3.12/site-packages/music21/base.py:559: UserWarning: Setting an ID that could be mistaken for a memory location is discouraged: got 135035394833968\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = overlay_generated_harmony(x['melody_part'], x['input_tokens'], x['ql_per_quantum'], x['skip_steps'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "691e9e90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0.0} <music21.stream.Part 0x7ad060a001d0>\n",
+      "    {0.0} <music21.stream.Measure 1 offset=0.0>\n",
+      "        {0.0} <music21.clef.BassClef>\n",
+      "        {0.0} <music21.tempo.MetronomeMark allegro moderato Quarter=128>\n",
+      "        {0.0} <music21.key.Key of G major>\n",
+      "        {0.0} <music21.meter.TimeSignature 4/4>\n",
+      "        {0.0} <music21.note.Note G>\n",
+      "        {0.25} <music21.note.Rest eighth>\n",
+      "        {0.75} <music21.note.Note G>\n",
+      "        {1.25} <music21.note.Rest 16th>\n",
+      "        {1.5} <music21.note.Note G>\n",
+      "        {2.0} <music21.note.Note B>\n",
+      "        {2.5} <music21.note.Note G>\n",
+      "        {3.0} <music21.note.Note A>\n",
+      "        {3.5} <music21.note.Note G>\n",
+      "    {4.0} <music21.stream.Measure 2 offset=4.0>\n",
+      "        {0.0} <music21.note.Note G>\n",
+      "        {0.25} <music21.note.Rest eighth>\n",
+      "        {0.75} <music21.note.Note G>\n",
+      "        {1.25} <music21.note.Rest 16th>\n",
+      "        {1.5} <music21.note.Note G>\n",
+      "        {2.0} <music21.note.Note B>\n",
+      "        {2.5} <music21.note.Note D>\n",
+      "        {3.0} <music21.note.Note A>\n",
+      "        {3.5} <music21.note.Note D>\n",
+      "    {8.0} <music21.stream.Measure 3 offset=8.0>\n",
+      "        {0.0} <music21.note.Note G>\n",
+      "        {0.25} <music21.note.Rest eighth>\n",
+      "        {0.75} <music21.note.Note G>\n",
+      "        {1.25} <music21.note.Rest 16th>\n",
+      "        {1.5} <music21.note.Note G>\n",
+      "        {2.0} <music21.note.Note B>\n",
+      "        {2.5} <music21.note.Note G>\n",
+      "        {3.0} <music21.note.Note A>\n",
+      "        {3.5} <music21.note.Note G>\n",
+      "    {12.0} <music21.stream.Measure 4 offset=12.0>\n",
+      "        {0.0} <music21.note.Note D>\n",
+      "        {0.25} <music21.note.Rest eighth>\n",
+      "        {0.75} <music21.note.Note D>\n",
+      "        {1.25} <music21.note.Rest 16th>\n",
+      "        {1.5} <music21.note.Note D>\n",
+      "        {2.0} <music21.note.Note B>\n",
+      "        {2.5} <music21.note.Note D>\n",
+      "        {3.0} <music21.note.Note B>\n",
+      "        {3.5} <music21.note.Note D>\n",
+      "    {16.0} <music21.stream.Measure 5 offset=16.0>\n",
+      "        {0.0} <music21.note.Note G>\n",
+      "        {0.25} <music21.note.Rest eighth>\n",
+      "        {0.75} <music21.note.Note G>\n",
+      "        {1.25} <music21.note.Rest 16th>\n",
+      "        {1.5} <music21.note.Note G>\n",
+      "        {2.0} <music21.note.Note B>\n",
+      "        {2.5} <music21.note.Note G>\n",
+      "        {3.0} <music21.note.Note A>\n",
+      "        {3.5} <music21.note.Note G>\n",
+      "    {20.0} <music21.stream.Measure 6 offset=20.0>\n",
+      "        {0.0} <music21.note.Note G>\n",
+      "        {0.25} <music21.note.Rest eighth>\n",
+      "        {0.75} <music21.note.Note G>\n",
+      "        {1.25} <music21.note.Rest 16th>\n",
+      "        {1.5} <music21.note.Note G>\n",
+      "        {2.0} <music21.note.Note B>\n",
+      "        {2.5} <music21.note.Note D>\n",
+      "        {3.0} <music21.note.Note A>\n",
+      "        {3.5} <music21.note.Note D>\n",
+      "    {24.0} <music21.stream.Measure 7 offset=24.0>\n",
+      "        {0.0} <music21.note.Note G>\n",
+      "        {0.0} <music21.note.Rest dotted-eighth>\n",
+      "        {0.75} <music21.note.Note G>\n",
+      "        {1.5} <music21.note.Note G>\n",
+      "        {2.0} <music21.note.Note B>\n",
+      "        {2.5} <music21.note.Note G>\n",
+      "        {3.0} <music21.note.Note A>\n",
+      "        {3.5} <music21.note.Note G>\n",
+      "    {28.0} <music21.stream.Measure 8 offset=28.0>\n",
+      "        {0.0} <music21.note.Note D>\n",
+      "        {0.25} <music21.note.Rest eighth>\n",
+      "        {0.75} <music21.note.Note D>\n",
+      "        {1.25} <music21.note.Rest 16th>\n",
+      "        {1.5} <music21.note.Note D>\n",
+      "        {2.0} <music21.note.Note B>\n",
+      "        {3.0} <music21.note.Note D>\n",
+      "        {4.0} <music21.bar.Barline type=final>\n",
+      "{0.0} <music21.stream.Part 0x7ad060bd8260>\n",
+      "    {0.0} <music21.stream.Measure 1 offset=0.0>\n",
+      "        {0.0} <music21.clef.BassClef>\n",
+      "        {0.0} <music21.tempo.MetronomeMark allegro moderato Quarter=128>\n",
+      "        {0.0} <music21.key.Key of G major>\n",
+      "        {0.0} <music21.meter.TimeSignature 4/4>\n",
+      "        {0.0} <music21.note.Rest whole>\n",
+      "    {4.0} <music21.stream.Measure 2 offset=4.0>\n",
+      "        {0.0} <music21.note.Rest whole>\n",
+      "    {8.0} <music21.stream.Measure 3 offset=8.0>\n",
+      "        {0.0} <music21.note.Rest whole>\n",
+      "    {12.0} <music21.stream.Measure 4 offset=12.0>\n",
+      "        {2.0} <music21.chord.Chord D3 F#3 A3>\n",
+      "    {16.0} <music21.stream.Measure 5 offset=16.0>\n",
+      "        {0.0} <music21.chord.Chord D3 F#3 A3>\n",
+      "    {20.0} <music21.stream.Measure 6 offset=20.0>\n",
+      "        {0.0} <music21.chord.Chord D3 F#3 A3>\n",
+      "    {24.0} <music21.stream.Measure 7 offset=24.0>\n",
+      "        {0.0} <music21.chord.Chord C3 E3 G3>\n",
+      "    {28.0} <music21.stream.Measure 8 offset=28.0>\n",
+      "        {0.0} <music21.chord.Chord C3 E3 G3>\n",
+      "        {1.0} <music21.bar.Barline type=final>\n"
+     ]
+    }
+   ],
+   "source": [
+    "s.show('t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ab8ffe25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = m21.converter.parse('example_inputs/test_midi_constraints.mid')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3414345f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0.0} <music21.stream.Measure 1 offset=0.0>\n",
+      "    {0.0} <music21.instrument.Piano 'Piano, Piano: Piano, Piano'>\n",
+      "    {0.0} <music21.clef.BassClef>\n",
+      "    {0.0} <music21.key.Key of G major>\n",
+      "    {0.0} <music21.meter.TimeSignature 4/4>\n",
+      "    {0.0} <music21.note.Rest whole>\n",
+      "{4.0} <music21.stream.Measure 2 offset=4.0>\n",
+      "    {0.0} <music21.note.Rest whole>\n",
+      "{8.0} <music21.stream.Measure 3 offset=8.0>\n",
+      "    {0.0} <music21.note.Rest whole>\n",
+      "{12.0} <music21.stream.Measure 4 offset=12.0>\n",
+      "    {0.0} <music21.note.Rest half>\n",
+      "    {2.0} <music21.chord.Chord D3 F#3 A3>\n",
+      "{16.0} <music21.stream.Measure 5 offset=16.0>\n",
+      "    {0.0} <music21.note.Rest whole>\n",
+      "{20.0} <music21.stream.Measure 6 offset=20.0>\n",
+      "    {0.0} <music21.note.Rest whole>\n",
+      "{24.0} <music21.stream.Measure 7 offset=24.0>\n",
+      "    {0.0} <music21.stream.Voice 0x7ad060b970e0>\n",
+      "        {0.0} <music21.note.Note G>\n",
+      "        {0.75} <music21.note.Rest 3.25ql>\n",
+      "    {0.0} <music21.stream.Voice 0x7ad060b97a70>\n",
+      "        {0.0} <music21.chord.Chord C3 E3>\n",
+      "        {3.75} <music21.note.Rest 16th>\n",
+      "    {4.0} <music21.bar.Barline type=final>\n",
+      "{0.0} <music21.stream.Measure 1 offset=0.0>\n",
+      "    {0.0} <music21.instrument.Piano 'Piano, Piano: Piano, Piano'>\n",
+      "    {0.0} <music21.clef.BassClef>\n",
+      "    {0.0} <music21.key.Key of G major>\n",
+      "    {0.0} <music21.meter.TimeSignature 4/4>\n",
+      "    {0.0} <music21.note.Rest whole>\n",
+      "{4.0} <music21.stream.Measure 2 offset=4.0>\n",
+      "    {0.0} <music21.note.Rest whole>\n",
+      "{8.0} <music21.stream.Measure 3 offset=8.0>\n",
+      "    {0.0} <music21.note.Rest whole>\n",
+      "{12.0} <music21.stream.Measure 4 offset=12.0>\n",
+      "    {0.0} <music21.note.Rest half>\n",
+      "    {2.0} <music21.chord.Chord D3 F#3 A3>\n",
+      "{16.0} <music21.stream.Measure 5 offset=16.0>\n",
+      "    {0.0} <music21.note.Rest whole>\n",
+      "{20.0} <music21.stream.Measure 6 offset=20.0>\n",
+      "    {0.0} <music21.note.Rest whole>\n",
+      "{24.0} <music21.stream.Measure 7 offset=24.0>\n",
+      "    {0.0} <music21.chord.Chord C3 E3 G3>\n",
+      "    {0.75} <music21.chord.Chord C3 E3>\n",
+      "    {3.75} <music21.note.Rest 16th>\n",
+      "    {4.0} <music21.bar.Barline type=final>\n",
+      "{0.0} <music21.instrument.Piano 'Piano, Piano: Piano, Piano'>\n",
+      "{0.0} <music21.clef.BassClef>\n",
+      "{0.0} <music21.key.Key of G major>\n",
+      "{0.0} <music21.meter.TimeSignature 4/4>\n",
+      "{0.0} <music21.note.Rest whole>\n",
+      "{4.0} <music21.note.Rest whole>\n",
+      "{8.0} <music21.note.Rest whole>\n",
+      "{12.0} <music21.note.Rest half>\n",
+      "{14.0} <music21.chord.Chord D3 F#3 A3>\n",
+      "{16.0} <music21.note.Rest whole>\n",
+      "{20.0} <music21.note.Rest whole>\n",
+      "{24.0} <music21.chord.Chord C3 E3 G3>\n",
+      "{24.75} <music21.chord.Chord C3 E3>\n",
+      "{27.75} <music21.note.Rest 16th>\n",
+      "{28.0} <music21.bar.Barline type=final>\n"
+     ]
+    }
+   ],
+   "source": [
+    "p1 = m.parts[1]\n",
+    "c1 = p1.chordify()\n",
+    "f1 = c1.flatten()\n",
+    "p1.show('t')\n",
+    "c1.show('t')\n",
+    "f1.show('t')"
    ]
   }
  ],
