direct midi and random ablations

--- a/make_dataset_pickle.ipynb
+++ b/make_dataset_pickle.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "6af1278f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/maximos/miniconda3/envs/torch/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from data_utils import CSGridMLMDataset\n",
     "from GridMLM_tokenizers import CSGridMLMTokenizer"
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "baa2c8e8",
    "metadata": {},
    "outputs": [],
@@ -33,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "bf59d115",
    "metadata": {},
    "outputs": [],
@@ -91,10 +82,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4911b4f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frontloading data.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 14676/14676 [07:47<00:00, 31.38it/s]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frontloading data.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 758/758 [00:16<00:00, 47.30it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "train_dataset = CSGridMLMDataset(train_dir, tokenizer_noPCs, 512, name_suffix='MLMH_noPCs')\n",
     "val_dataset = CSGridMLMDataset(val_dir, tokenizer_noPCs, 512, name_suffix='MLMH_noPCs')"
